# consolidated-project

./: CMakeLists.txt  Main.c  README.md
Arrays/project/: Arrays.c  Arrays.h
Calculator/project/: Calculator.c  Calculator.h
DynamicMemory/project/: Memory.c  Memory.h
Functions/project/: Functions.c  Functions.h
ReadFile/project/: My-information.txt  ReadFile.c  ReadFile.h
String/project/: String.c  String_.h
Struct-union/project/: Struct-Union.c  Struct-Union.h
StudentInfo/project/: StudentInfo.c  StudentInfo.h
number-guessing-game/project/: NumberGuessingGame.h  numberGuessingGame.c
output-input/project/: outputInput.c  outputInput.h
